--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.24",
     "axios": "^1.13.5",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18",
     "vite-plugin-pwa": "^1.2.0",
