--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 # Dependencies
 node_modules/
-package-lock.json
+.pnp
+.pnp.js
 
 # Environment Variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
 
 # Build Output
 dist/
