--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "@google/genai": "^1.41.0",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
